--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;600;800&display=swap');
-body{
-    background: #0e0e0e;
-    color: white;
+
+body {
+    background: #222; /* Gris oscuro */
+    color: #eee; /* Blanco */
     padding: 0;
     margin: 0;
     font-family: 'Outfit', sans-serif;
 }
 
-.center{
+.center {
     text-align: center;
     align-content: center;
 }
@@ -18,17 +19,17 @@ body{
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #00000000;
+    background: #333; /* Gris un poco más claro */
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #212121;
+    background: #555; /* Gris */
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #777; /* Gris más claro */
 }
 
 @keyframes bgWaveAnimation {
@@ -41,7 +42,7 @@ body{
     100% {transform:  rotate(360deg)}
 }
 
-.gradientBallContainer{
+.gradientBallContainer {
     animation: gradientAnimation 25s linear infinite;
     height: fit-content;
     position: fixed;
@@ -52,30 +53,29 @@ body{
     background-size: cover;
 }
 
-.gradientBall{
+.gradientBall {
     background-size: 150% 150%;
     animation: bgWaveAnimation 5s linear infinite;
     width: 70vh;
     height: 70vh;
-    background-image: linear-gradient(90deg, #992bff, #ff0090);
+    background-image: linear-gradient(90deg, #333, #222, #555); /* Gris oscuro, Gris, Gris más oscuro */
     border-radius: 50%;
     z-index: -2;
     filter: blur(100px);
 }
 
-
-.gradientBall2{
+.gradientBall2 {
     background-size: 150% 150%;
     animation: bgWaveAnimation 6s linear infinite;
     width: 80vh;
     height: 80vh;
-    background-image: linear-gradient(90deg, #992bff, #ff0090);
+    background-image: linear-gradient(90deg, #333, #222, #555); /* Gris oscuro, Gris, Gris más oscuro */
     border-radius: 50%;
     filter: blur(100px);
     z-index: -2;
 }
 
-.backgroundFront{
+.backgroundFront {
     z-index: -1;
     width: 100%;
     height: 100%;
@@ -85,23 +85,23 @@ body{
     background-color: rgba(0, 0, 0, 0.53);
 }
 
-.button{
-    color: white;
+.button {
+    color: #fff; /* Blanco */
     text-decoration: none;
-    background: #02020290;
-    padding: 5px;
+    background: #555; /* Gris más oscuro */
+    padding: 10px 20px;
     border-radius: 10px;
     margin-top: 30px;
     display: inline-block;
     width: 230px;
     transition: 0.5s;
-    box-shadow: 0 0 20px #00000050;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
-.button:hover{
-    background: -webkit-linear-gradient(0deg, #ff0090, #992bff);
+.button:hover {
+    background: #777; /* Gris más claro */
     transform: scale(1.1);
-    box-shadow: 0 0 20px #cc16c880;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
 }
 
 @keyframes cardAnimation {
@@ -115,32 +115,32 @@ body{
 }
 
 @media only screen and (max-width: 730px) {
-    .title{
+    .title {
         font-size: 18svw !important;
     }
 
-    .subtitle{
+    .subtitle {
         font-size: 5svw !important;
     }
 }
 
-.title{
+.title {
     font-size: 130px;
     font-weight: 600;
-    background: -webkit-linear-gradient(0deg, #992bff, #ff0090, #992bff);
+    background: -webkit-linear-gradient(0deg, #555, #222, #555); /* Gris oscuro, Gris, Gris más oscuro */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-size: 400%;
     animation: waveAnimation 6s linear infinite;
 }
 
-.subtitle{
+.subtitle {
     font-size: 40px;
     font-weight: 600;
     margin-top: 4px;
 }
 
-.card{
+.card {
     perspective: 1000px;
     animation: cardAnimation .7s cubic-bezier(0.16, 1, 0.3, 1);
     padding: 30px;
